--- a/articles/templates/archive.html
+++ b/articles/templates/archive.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="header">
-	<img src="{{ STATIC_URL}}/img/logo.png" height="50"/>
+	<img src="{{ STATIC_URL}}/static/logo.jpeg" height="50"/>
 </div>
 <div class="archive">
 {% for post in posts %}
